Remove NotImplemented from IsInVR

If a platform does not support VR, IsInVR should return false
without spamming the console.

BUG=712306

Review-Url: https://codereview.chromium.org/2822223002
Cr-Commit-Position: refs/heads/master@{#465599}