content/browser/renderer_host/render_widget_host_view_base.cc
@@ -139,7 +139,6 @@ void RenderWidgetHostViewBase::SetIsInVR(bool is_in_vr) {
 }
 
 bool RenderWidgetHostViewBase::IsInVR() const {
-  NOTIMPLEMENTED();
   return false;
 }
 
